ev-link-accesible: Return the index/offset after the last character in the link

https://bugzilla.gnome.org/show_bug.cgi?id=704616